Reconfigured tmux to play nice with vim

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,9 +1,26 @@
-# set tmux prefix to Ctrl-s
+# set tmux prefix to Ctrl-Space
 # Close to C-a, but I want to keep that functionality in vim
-# A decent alternative would be Ctrl-q
-unbind C-b 
-set -g prefix C-s
-bind C-s send-prefix
+# A decent alternative would be Ctrl-q or Ctrl-s
+unbind C-b
+set -g prefix C-Space
+bind Space send-prefix
+
+bind Space copy-mode
+bind C-Space copy-mode
+
+bind j split-window -v
+bind l split-window -h
+
+# Sets <Prefix> C-l to clear the screen
+bind C-l send-keys 'C-l'
+
+# Tmux navigator bindings
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # set TERM to 256 color
 set -g default-terminal "screen-256color"
@@ -13,6 +30,7 @@ set -g mode-keys vi
 set -g status-keys emacs
 
 # Enable mouse controls
+setw -g mode-mouse on
 set -g mouse-resize-pane on
 set -g mouse-select-pane on
 set -g mouse-select-window on
@@ -46,8 +64,6 @@ SEP=' | '
 set-option -g status-right-length 1000
 set-option -g status-left-length 60
 
-tm_email=''
-tm_date=''
 setw -g clock-mode-colour colour117
 setw -g mode-attr bold
 setw -g mode-fg colour117
@@ -55,8 +71,8 @@ setw -g mode-bg colour238
 set -g status-bg colour235
 set -g status-fg colour248
 set -g status-attr dim
-set -g status-left '#[fg=colour187,bold]#H'
-set -g status-right '#[fg=colour174]#(mpc) #[fg=colour187,bold]%H:%M'
+set -g status-left '#[fg=colour187,bold]#H '
+set -g status-right '#[fg=colour187,bold]%H:%M'
 set -g status-right-length 80
 setw -g window-status-current-fg colour223
 setw -g window-status-current-bg colour237
@@ -72,7 +88,6 @@ set -g @tpm_plugins '              \
   tmux-plugins/tmux-copycat        \
   tmux-plugins/tmux-yank           \
   tmux-plugins/tmux-open           \
-  tmux-plugins/tmux-pain-control   \
   tmux-plugins/tmux-resurrect      \
 '
 
