--- a/i3/.i3blocks.conf
+++ b/i3/.i3blocks.conf
@@ -1,19 +1,19 @@
-# Global properties
-full_text=
-#full_text=〉
+# Global properties - apply to each block
+# full_text=
+# full_text=〉
+full_text=
 align=center
 color=#ffffff
 separator=false
-separator_block_width=10 
+separator_block_width=15
 
-#[media]
-#label=
-#label=music:
-#command=/home/hollandheese/.local/bin/mediaplayer
-#interval=15
+[media]
+command=/home/octotep/bin/mpdstatus
+interval=5
 
-#[separator]
-# TODO: disk usage, memory, next remind event, ip address, song
+[separator]
+
+# TODO: disk usage, memory
 
 [alltasks]
 label=
@@ -29,13 +29,17 @@ interval=60
 
 [separator]
 
+[updates]
+#label=
+command=/home/octotep/bin/i3blocksupdates
+interval=1800
+
+[separator]
+
 [time]
 label=
 command=date '+%a, %b %d %l:%M %p'
 interval=5
 
-#[seperator]
-
 [end]
 full_text= 
-# full_text=|
