--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,6 @@ unbind C-b
 set -g prefix C-Space
 bind Space send-prefix
 
-bind Space copy-mode
 bind C-Space copy-mode
 
 bind j split-window -v
@@ -13,6 +12,9 @@ bind l split-window -h
 
 # Sets <Prefix> C-l to clear the screen
 bind C-l send-keys 'C-l'
+
+# Bine <Prefix> r to reload tmux config
+bind r source-file ~/.tmux.conf
 
 # Tmux navigator bindings
 is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
@@ -25,19 +27,26 @@ bind -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 # set TERM to 256 color
 set -g default-terminal "screen-256color"
 
-# set mode keys
+# Binding to stnchronize tmux panes
+bind a set-window-option synchronize-panes
+
+# Autohide the tmux status bar on startup, show when a window is opened
+set -g status off
+bind b set-option status
+bind-key -T prefix c new-window \; set-option status on
+bind-key -T prefix & if-shell "[[ #{session_windows} -le 2 ]]" "kill-window ; set status off" kill-window
+bind-key -T prefix x if-shell "[[ #{session_windows} -le 2 ]]" "kill-pane ; set status off" kill-pane
+
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Enable mouse controls - scrolling tricks for tmux 2.1+ curtsey of tmux issue #145
+set -g mouse on
 set -g mode-keys vi
 set -g status-keys emacs
-
-# Enable mouse controls
-setw -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
-
-# enable utf8
-set -g utf8 on
-set -g status-utf8 on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
 
 # improve vim escape time
 set -sg escape-time 10
@@ -48,38 +57,36 @@ set -g focus-events on
 # better resizing defaults
 setw -g aggressive-resize on
 
-# Set colorscheme for line
-setw -g window-status-attr none
-setw -g window-status-attr bold
-setw -g window-status-current-format '>#I:#W'
-
-# status bar configuration
-SEP=' | '
-
-# date and such
-#tm_date='#[fg=red]#(date "+%d/%m/%Y %H:%M")#[default] '
-
-#set-option -g status-right $SEP$tm_date
-
 set-option -g status-right-length 1000
 set-option -g status-left-length 60
 
-setw -g clock-mode-colour colour117
+# Set attributes for clock
+setw -g clock-mode-colour colour250
+set-window-option -g clock-mode-style 12
+
+# Set colors for tmux command line (<Prefix> :)
 setw -g mode-attr bold
-setw -g mode-fg colour117
-setw -g mode-bg colour238
+setw -g mode-fg colour231
+setw -g mode-bg colour242
+
+set -g status-fg colour250
 set -g status-bg colour235
-set -g status-fg colour248
 set -g status-attr dim
-set -g status-left '#[fg=colour187,bold]#H '
-set -g status-right '#[fg=colour187,bold]%H:%M'
+set -g status-justify left
+set -g status-left ''
+set -g status-right '#[fg=colour229,bold]#S@#H  #[fg=colour229,bold]%I:%M%P'
 set -g status-right-length 80
-setw -g window-status-current-fg colour223
-setw -g window-status-current-bg colour237
+
+# set colorscheme for window status
+setw -g window-status-attr none
+setw -g window-status-attr bold
+setw -g window-status-format '#[fg=colour235]#[bg=colour60] #I #[bg=colour238]#[fg=colour250] #W '
+setw -g window-status-current-format '#[fg=colour235]#[bg=colour60] #I #[bg=colour110]#[fg=colour235] #W '
 setw -g window-status-current-attr bold
+
 set -g message-attr bold
-set -g message-fg colour117
-set -g message-bg colour235
+set -g message-fg colour250
+set -g message-bg colour242
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
